methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:38: error: expected class or object definition
def faireRond(c:Color){
^PatternPicture:53: error: Unmatched closing brace '}' ignored here
}
^